k8s/mailhog/mailhog-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mailhog
  name: mailhog-svc
spec:
  ports:
    - name: smtp 
      port: 1025 # SMTP port
      protocol: TCP
      targetPort: 1025
      nodePort: 30025
    - name: http-ui 
      port: 8025 # HTTP UI port
      protocol: TCP
      targetPort: 8025
      nodePort: 30085
  selector: 
    app: mailhog
  type: NodePort
