k8s/mailhog/mailhog-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailhog-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
  - host: "farmercompensation.ddns.net"
    http:
      paths:
      - path: /mailhog(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: mailhog-svc
            port:
              number: 8025
  - host: "our-host.ddns.net"
    http:
      paths:
      - path: /mailhog
        pathType: Prefix
        backend:
          service:
            name: mailhog-svc
            port:
              number: 8025
  tls:
  - hosts:
    - farmercompensation.ddns.net
    - our-host.ddns.net
    secretName: spring-production-certificate
