k8s/mailhog/mailhog-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailhog-ingress
spec:
  rules:
  - host: "farmercompensation.ddns.net"
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: mailhog-svc
            port:
              name: mailhog
  - host: "our-host.ddns.net"
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: mailhog-svc
            port:
              name: mailhog
